kubernetes/home/apps/default/api/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: api.shaklab.com
    external-dns.alpha.kubernetes.io/target: ipv4.shaklab.com
spec:
  # ipFamilyPolicy: PreferDualStack
  selector:
    app: api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
