kubernetes/home/apps/default/api/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.shaklab.com`)
      kind: Rule
      # middlewares:
      #   - name: default-headers
      services:
        - name: api
          port: 3000
  tls:
    secretName: shaklab-com-tls-certs
